--- a/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
+++ b/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITableViewCell</string>
+			<string>IBProxyObject</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -43,7 +43,7 @@
 							<object class="IBUIImageView" id="254958883">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 24}, {76, 91}}</string>
+								<string key="NSFrame">{{20, 20}, {76, 91}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSNextKeyView" ref="232014887"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -54,7 +54,7 @@
 							<object class="IBUILabel" id="232014887">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 15}, {495, 56}}</string>
+								<string key="NSFrame">{{119, 11}, {495, 56}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSNextKeyView" ref="772317120"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -67,6 +67,7 @@
 								<object class="NSColor" key="IBUITextColor" id="164001703">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
+									<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 								</object>
 								<object class="NSColor" key="IBUIHighlightedColor" id="419340468">
 									<int key="NSColorSpace">3</int>
@@ -88,7 +89,7 @@
 							<object class="IBUILabel" id="772317120">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 71}, {588, 54}}</string>
+								<string key="NSFrame">{{119, 67}, {588, 54}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -112,9 +113,10 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">588</double>
 							</object>
 						</array>
-						<string key="NSFrameSize">{768, 139}</string>
+						<string key="NSFrameSize">{768, 135}</string>
 						<reference key="NSSuperview" ref="774316942"/>
 						<reference key="NSNextKeyView" ref="254958883"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
@@ -129,13 +131,13 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{768, 140}</string>
+				<string key="NSFrameSize">{768, 136}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="946753982"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<reference key="IBUIContentView" ref="946753982"/>
-				<real value="57" key="IBUIRowHeight"/>
+				<real value="53" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -232,10 +234,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
