--- a/Draw/Dice/View/PopupView/ChatView~ipad.xib
+++ b/Draw/Dice/View/PopupView/ChatView~ipad.xib
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUIView</string>
-			<string>IBUIImageView</string>
 			<string>IBProxyObject</string>
-			<string>IBUITableView</string>
+			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUIPageControl</string>
 			<string>IBUIScrollView</string>
-			<string>IBUIButton</string>
+			<string>IBUITableView</string>
+			<string>IBUITextView</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -53,7 +54,7 @@
 					<object class="IBUIScrollView" id="522709830">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{40, 58}, {444, 70}}</string>
+						<string key="NSFrame">{{40, 212}, {444, 70}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="79914890"/>
@@ -72,7 +73,7 @@
 					<object class="IBUITableView" id="199380516">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{40, 136}, {444, 420}}</string>
+						<string key="NSFrame">{{40, 294}, {444, 262}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -128,7 +129,7 @@
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">1316</int>
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrame">{{243, 25}, {38, 36}}</string>
+						<string key="NSFrame">{{243, 269}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -137,6 +138,47 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUINumberOfPages">3</int>
+					</object>
+					<object class="IBUIImageView" id="1036024424">
+						<reference key="NSNextResponder" ref="720298618"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{40, 45}, {444, 159}}</string>
+						<reference key="NSSuperview" ref="720298618"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
+					<object class="IBUITextView" id="251227173">
+						<reference key="NSNextResponder" ref="720298618"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{40, 45}, {444, 159}}</string>
+						<reference key="NSSuperview" ref="720298618"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEAA</bytes>
+						</object>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+						<string key="IBUIText"/>
+						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIAutocapitalizationType">2</int>
+							<int key="IBUIReturnKeyType">7</int>
+							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						</object>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">28</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">28</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{526, 572}</string>
@@ -181,6 +223,22 @@
 						<reference key="destination" ref="72694579"/>
 					</object>
 					<int key="connectionID">16</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputTextViewBgImageView</string>
+						<reference key="source" ref="720298618"/>
+						<reference key="destination" ref="1036024424"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputTextView</string>
+						<reference key="source" ref="720298618"/>
+						<reference key="destination" ref="251227173"/>
+					</object>
+					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -240,10 +298,12 @@
 						<reference key="object" ref="720298618"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="799711035"/>
-							<reference ref="522709830"/>
 							<reference ref="79914890"/>
 							<reference ref="199380516"/>
+							<reference ref="522709830"/>
 							<reference ref="72694579"/>
+							<reference ref="1036024424"/>
+							<reference ref="251227173"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -272,6 +332,16 @@
 						<reference key="object" ref="72694579"/>
 						<reference key="parent" ref="720298618"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="1036024424"/>
+						<reference key="parent" ref="720298618"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="251227173"/>
+						<reference key="parent" ref="720298618"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -280,6 +350,9 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.CustomClassName">UICustomPageControl</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="18.CustomClassName">UIPlaceholderTextView</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">FontButton</string>
@@ -292,16 +365,18 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">20</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">ChatView</string>
-					<string key="superclassName">UIView</string>
+					<string key="superclassName">UIButton</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="bgImageView">UIImageView</string>
 						<string key="expressionsHolderView">UIScrollView</string>
+						<string key="inputTextView">UIPlaceholderTextView</string>
+						<string key="inputTextViewBgImageView">UIImageView</string>
 						<string key="messagesHolderView">UITableView</string>
 						<string key="pageController">UICustomPageControl</string>
 					</dictionary>
@@ -313,6 +388,14 @@
 						<object class="IBToOneOutletInfo" key="expressionsHolderView">
 							<string key="name">expressionsHolderView</string>
 							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputTextView">
+							<string key="name">inputTextView</string>
+							<string key="candidateClassName">UIPlaceholderTextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputTextViewBgImageView">
+							<string key="name">inputTextViewBgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="messagesHolderView">
 							<string key="name">messagesHolderView</string>
@@ -352,13 +435,21 @@
 						<string key="minorKey">./Classes/UIGlossyButton.h</string>
 					</object>
 				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIPlaceholderTextView</string>
+					<string key="superclassName">UITextView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIPlaceholderTextView.h</string>
+					</object>
+				</object>
 			</array>
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -366,6 +457,6 @@
 			<string key="NS.key.0">clean_input@2x.png</string>
 			<string key="NS.object.0">{57, 57}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
