--- a/Draw/Dice/View/PopupView/ChatView.xib
+++ b/Draw/Dice/View/PopupView/ChatView.xib
@@ -45,7 +45,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 9}, {243, 274}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
-						<reference key="NSNextKeyView" ref="1009680257"/>
+						<reference key="NSNextKeyView" ref="410793629"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -55,7 +55,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{20, 97}, {222, 35}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
-						<reference key="NSNextKeyView" ref="501979713"/>
+						<reference key="NSNextKeyView" ref="381758895"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="800991718">
 							<int key="NSColorSpace">3</int>
@@ -73,6 +73,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{21, 142}, {222, 134}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSNextKeyView" ref="501979713"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="800991718"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -89,7 +90,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{237, 0}, {25, 25}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
-						<reference key="NSNextKeyView" ref="381758895"/>
+						<reference key="NSNextKeyView" ref="1009680257"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -127,7 +128,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{112, 118}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
-						<reference key="NSNextKeyView" ref="298656072"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -138,8 +139,9 @@
 					<object class="IBUIImageView" id="410793629">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 17}, {222, 72}}</string>
+						<string key="NSFrame">{{17, 14}, {228, 78}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSNextKeyView" ref="1052637542"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -147,8 +149,9 @@
 					<object class="IBUITextView" id="1052637542">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 17}, {222, 72}}</string>
+						<string key="NSFrame">{{25, 24}, {212, 58}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
+						<reference key="NSNextKeyView" ref="298656072"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -360,7 +363,95 @@
 			<nil key="sourceID"/>
 			<int key="maxID">32</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ChatView</string>
+					<string key="superclassName">UIButton</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickCloseButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickCloseButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickCloseButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bgImageView">UIImageView</string>
+						<string key="expressionsHolderView">UIScrollView</string>
+						<string key="inputTextView">UIPlaceholderTextView</string>
+						<string key="inputTextViewBgImageView">UIImageView</string>
+						<string key="messagesHolderView">UITableView</string>
+						<string key="pageController">UICustomPageControl</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="expressionsHolderView">
+							<string key="name">expressionsHolderView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputTextView">
+							<string key="name">inputTextView</string>
+							<string key="candidateClassName">UIPlaceholderTextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputTextViewBgImageView">
+							<string key="name">inputTextViewBgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="messagesHolderView">
+							<string key="name">messagesHolderView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pageController">
+							<string key="name">pageController</string>
+							<string key="candidateClassName">UICustomPageControl</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ChatView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIGlossyButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICustomPageControl</string>
+					<string key="superclassName">UIPageControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICustomPageControl.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIPlaceholderTextView</string>
+					<string key="superclassName">UITextView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIPlaceholderTextView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
