--- a/Draw/Dice/View/PopupView/ChatView~ipad.xib
+++ b/Draw/Dice/View/PopupView/ChatView~ipad.xib
@@ -139,20 +139,20 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUINumberOfPages">3</int>
 					</object>
-					<object class="IBUIImageView" id="1036024424">
+					<object class="IBUIImageView" id="808222391">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{40, 45}, {444, 159}}</string>
+						<string key="NSFrame">{{34, 39}, {456, 171}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
-					<object class="IBUITextView" id="251227173">
+					<object class="IBUITextView" id="974297001">
 						<reference key="NSNextResponder" ref="720298618"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{40, 45}, {444, 159}}</string>
+						<string key="NSFrame">{{50, 55}, {424, 139}}</string>
 						<reference key="NSSuperview" ref="720298618"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -228,7 +228,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">inputTextViewBgImageView</string>
 						<reference key="source" ref="720298618"/>
-						<reference key="destination" ref="1036024424"/>
+						<reference key="destination" ref="808222391"/>
 					</object>
 					<int key="connectionID">19</int>
 				</object>
@@ -236,7 +236,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">inputTextView</string>
 						<reference key="source" ref="720298618"/>
-						<reference key="destination" ref="251227173"/>
+						<reference key="destination" ref="974297001"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -302,8 +302,8 @@
 							<reference ref="199380516"/>
 							<reference ref="522709830"/>
 							<reference ref="72694579"/>
-							<reference ref="1036024424"/>
-							<reference ref="251227173"/>
+							<reference ref="808222391"/>
+							<reference ref="974297001"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -334,12 +334,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="1036024424"/>
+						<reference key="object" ref="808222391"/>
 						<reference key="parent" ref="720298618"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">18</int>
-						<reference key="object" ref="251227173"/>
+						<reference key="object" ref="974297001"/>
 						<reference key="parent" ref="720298618"/>
 					</object>
 				</array>
@@ -372,6 +372,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ChatView</string>
 					<string key="superclassName">UIButton</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickCloseButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickCloseButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickCloseButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="bgImageView">UIImageView</string>
 						<string key="expressionsHolderView">UIScrollView</string>
